<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorExercise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-160dp"
        tools:layout_editor_absoluteY="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExpression"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/ettOutput"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn7"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn8"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn9"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btnDivision"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btnDivision"
                    app:cornerRadius="70dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn4"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn5"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn6"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btnMultiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btnMultiplication"
                    app:cornerRadius="70dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn1"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn2"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn3"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btnSubtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btnSubtraction"
                    app:cornerRadius="70dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <Button
                    android:id="@+id/btnDecimalPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btnDecimalPoint"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn0"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btnAddition"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/btnAddition"
                    app:cornerRadius="70dp" />

                <Button
                    android:id="@+id/btnEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#424040"
                    android:text="@string/btnEquals"
                    app:cornerRadius="70dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>